# gitui-view

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: align.rs  app.rs  diff.rs  diff_engine.rs  edits.rs  files_tab.rs  git.rs  log_tab.rs  main.rs  stashes_tab.rs  status_tab.rs  theme.rs
