[package]
name = "git-view"
version = "0.1.0"
edition = "2021"
description = "A TUI app for reviewing git diffs with inline and side-by-side views"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
crossterm = { version = "0.29", features = ["serde"] }
git2 = "0.20"
lazy_static = "1.4"
ratatui = { version = "0.30", default-features = false, features = ["crossterm"] }
regex = "1.7"
syntect = { version = "5.3", default-features = false, features = ["default-syntaxes", "default-themes", "parsing", "plist-load", "regex-fancy"] }
unicode-segmentation = "1.10"
unicode-width = "0.2"

[profile.dev.package.ratatui]
opt-level = 3

[profile.release]
opt-level = "z"
strip = "debuginfo"
lto = true
codegen-units = 1
