[package]
name = "gitui-view"
version = "0.2.3"
edition = "2021"
rust-version = "1.77"
description = "A terminal-based Git repository browser with inline and side-by-side diff views"
license = "MIT"
repository = "https://github.com/lyj-514328/gitui-view"
homepage = "https://github.com/lyj-514328/gitui-view"
documentation = "https://docs.rs/gitui-view"
readme = "README.md"
keywords = ["git", "terminal", "gui", "cli", "ui"]
categories = ["command-line-utilities"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
anyhow = "1.0"
bat = { version = "0.26", default-features = false, features = ["regex-onig"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
clap = { version = "4", features = ["derive", "env"] }
crossterm = { version = "0.29", features = ["serde"] }
indexmap = "2"
git2 = "0.20"
lazy_static = "1.4"
ratatui = { version = "0.30", default-features = false, features = ["crossterm"] }
regex = "1.7"
syntect = { version = "5.3", default-features = false, features = ["default-syntaxes", "default-themes", "parsing", "plist-load", "regex-fancy"] }
terminal-colorsaurus = "0.4.8"
unicode-segmentation = "1.10"
unicode-width = "0.2"

[profile.dev.package.ratatui]
opt-level = 3

[profile.release]
opt-level = "z"
strip = "debuginfo"
lto = true
codegen-units = 1
